# VLM-APP

./: .gitignore  app.py  cameras.json  index.html  install_jetson_agx_jp62.sh  requirements.txt  run.bat
netsim/: README.md  pyproject.toml
netsim/docs/: api-schema.md  command-model.md
netsim/src/netsim_agent/: __init__.py  planner.py  service.py
netsim/src/netsim_agent/profiles/: defaults.json
netsim/src/netsim_api/: __init__.py  main.py  state.py
netsim/src/netsim_api/routers/: __init__.py  interfaces.py  lines.py  profiles.py
netsim/src/netsim_common/: __init__.py  models.py  profiles.py
static/: index.html
